--- a/test2/index.html
+++ b/test2/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="card">
-            <img src="../imgs/lusail.jpg">
+            <img src="images/lusail.jpg">
             <div class="info">
                 <h1>Lusail Stadium</h1>
                 <p>Located in Lusail City</p>
@@ -26,7 +26,7 @@
         </div>
         
         <div class="card">
-            <img src="../imgs/al_bayt.jpg">
+            <img src="images/al_bayt.jpg">
             <div class="info">
                 <h1>Al Bayt Stadium</h1>
                 <p>Located in Al Khor city</p>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="card">
-            <img src="../imgs/alwakrah.jpg">
+            <img src="images/alwakrah.jpg">
             <div class="info">
                 <h1>Al Janoub Stadium</h1>
                 <p>located in the town of Al Wakrah</p>
@@ -64,7 +64,7 @@
         </div>
         
         <div class="card">
-            <img src="../imgs/ahmad_bin_ali.jpg">
+            <img src="images/ahmad_bin_ali.jpg">
             <div class="info">
                 <h1>Ahmad Bin Ali Stadium</h1>
                 <p>Located in Al Rayyan</p>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="card">
-            <img src="../imgs/khalifa_stadium10.jpg">
+            <img src="images/khalifa_stadium10.jpg">
             <div class="info">
                 <h1>Khalifa International Stadium</h1>
                 <p>located in Doha, Qatar</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="card">
-            <img src="../imgs/education_city2.jpg">
+            <img src="images/education_city2.jpg">
             <div class="info">
                 <h1>Education City Stadium</h1>
                 <p>located on the outskirts <br/>of Doha</p>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="card">
-            <img src="../imgs/ras_abu.jpg">
+            <img src="images/ras_abu.jpg">
             <div class="info">
                 <h1>Ras Abu Aboud Stadium</h1>
                 <p>located in Doha, Qatar.</p>
@@ -133,7 +133,7 @@
         </div>
 
         <div class="card">
-            <img src="../imgs/al_thumama4.jpg">
+            <img src="images/al_thumama4.jpg">
             <div class="info">
                 <h1>Al Thumama Stadium</h1>
                 <p>located in Al Thumama Bus Stop 7</p>
