--- a/test2/index.html
+++ b/test2/index.html
@@ -388,7 +388,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -399,7 +399,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -410,7 +410,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -421,7 +421,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -432,7 +432,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -443,7 +443,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -454,7 +454,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -465,7 +465,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -476,7 +476,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -487,7 +487,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -498,7 +498,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -509,7 +509,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
@@ -520,7 +520,7 @@
           <div class="content">
               <img
               class="likeBtn"
-              src="images/heart-regular.svg"
+              src="/images/heart-regular.svg"
               alt="heart-icon"
               onclick="" >
               <span class="display">0</span>
